fixed the search bar and button spacing on AllGameSearch
, added a forgotPW page and started work on modal, added forgot pw link to login modal

--- a/frontend/src/components/GameSearchUIStyles.css
+++ b/frontend/src/components/GameSearchUIStyles.css
@@ -9,3 +9,7 @@
     padding-bottom:15px;
     width: 50%;
 }
+
+.form-container{
+    border-radius:45px;
+}
